--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wdth,wght@0,100,300..800;1,100,300..800&display=swap"
       rel="stylesheet"
     />
+    <script
+      async
+      src="https://script.extellio.com/gekas-prototyp-vercel-app.min.js"
+    ></script>
   </head>
   <body>
     <div id="root"></div>
